# examwrap-ai

./: .dockerignore  .env.example  .gitignore  App.tsx  Dockerfile  README.md  README_MIGRATION.md  docker-compose.yml  index.html  metadata.json  package-lock.json  package.json  types.ts
components/: BetaWarningModal.tsx  Dashboard.tsx  ExamConfig.tsx  ExamExportView.tsx  ExamInterface.tsx  FileUpload.tsx  LoadingScreen.tsx  MotivationalBanner.tsx  NeuralTour.tsx  NotesFormatter.tsx  Onboarding.tsx  OnboardingTour.tsx  PdfSummariser.tsx  PdfUploadGuide.tsx  QuestionMetadata.tsx  QuestionRenderer.tsx  ResultsDashboard.tsx  RevisionPlan.tsx  SubjectVerifier.tsx  SummaryView.tsx  SyllabusMap.tsx
config/: examPresets.ts  index.ts
docs/: BACKEND_API.md  FRONTEND_GUIDE.md  HIGH_YIELD_GUIDE.md  PRODUCT_INTRO_SCRIPT.md  STRATEGY_MARKETING.md
nextjs-frontend/app/: page.tsx
nextjs-frontend/lib/: api.ts
public/: robots.txt  sitemap.xml
rust-backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile
rust-backend/src/: config.rs  main.rs
rust-backend/src/config/: config.rs  exam_patterns.rs  mod.rs
rust-backend/src/models/: mod.rs  types.rs
rust-backend/src/routes/: gemini.rs  mod.rs
rust-backend/src/services/: gemini.rs  mod.rs  pdf_generator.rs
services/: geminiService.ts  pdfExportService.ts  pdfService.ts  storageService.ts  storageService.ts.backup
