[package]
name = "examwrap-backend"
version = "0.1.0"
edition = "2021"
description = "Rust backend for ExamWrapAI - AI-powered exam simulator"
authors = ["Viresh Solanki"]

[dependencies]
# Web Framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP Client (for Gemini API)
reqwest = { version = "0.12", features = ["json"] }

# Environment & Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
thiserror = "1"
anyhow = "1"
